clauses sorted pageable output

--- a/src/main/resources/templates/Clauses.html
+++ b/src/main/resources/templates/Clauses.html
@@ -49,7 +49,7 @@
             <td/>
             <td th:text="${clause.parts}"/>
             <td/>
-            <td th:text="${clause.getEnd()}"/>
+            <td th:text="${clause.end}"/>
         </tr>
 
     </table>
