--- a/src/main/resources/templates/Clauses.html
+++ b/src/main/resources/templates/Clauses.html
@@ -17,8 +17,9 @@
 
 <table>
     <!--<i th:text="${#strings.replace(clause.word,word.getEnd(),'('+clause.getEnd()+')')}" />-->
-    <tr th:each ="clause : ${clauses}">
+    <tr th:each ="clause : ${clauses}" valign="bottom">
         <td th:if="${clause.number}==1" width="20%" bgcolor="#f5f5f5">
+            <br/>
             <a th:text="${clause.article.id}"/>
             <b th:text="${clause.article.title}"/><br/>
             <i th:text="${clause.article.author.realname}"/>
