--- a/src/main/resources/templates/articles.html
+++ b/src/main/resources/templates/articles.html
@@ -11,6 +11,12 @@
 
 <div th:include="header::header"> HEADER </div>
 
+<a th:each ="page : ${pages}">
+    <a th:text="${page}" th:href="@{'http://localhost:8080/articles/page?page='+${page}}">
+        page
+    </a>
+</a>
+
 <table>
     <tr th:each ="article : ${articles}">
         <td>
