clauses and articles paging now are faster

--- a/src/main/resources/templates/Clauses.html
+++ b/src/main/resources/templates/Clauses.html
@@ -9,7 +9,13 @@
 <body>
 <div th:include="header::header"> HEADER </div>
 
-<a th:each ="page : ${pages}">
+<!--<a th:each ="page : ${pages}">-->
+    <!--<a th:text="${page}" th:href="@{'http://localhost:8080/clause/page?page='+${page}}">-->
+        <!--page-->
+    <!--</a>-->
+<!--</a>-->
+
+<a th:each="page : ${#numbers.sequence( 0, pages)}">
     <a th:text="${page}" th:href="@{'http://localhost:8080/clause/page?page='+${page}}">
         page
     </a>
