big bang in ends of clauses

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -22,7 +22,7 @@
         <a href="http://localhost:8080/authors/"> authors </a>
 
         <a href="http://localhost:8080/clause/page?page=0"> clauses </a>
-        <a href="http://localhost:8080/clause/ends"> clauseends </a>
+        <a href="http://localhost:8080/clause/parts"> clauseends </a>
 
         <a href="http://localhost:8080/wordbook/page?page=0"> wordbook </a>
         <a href="http://localhost:8080/wordbook/ends"> ends </a>
