sorting by clauses ends and paging this

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -22,7 +22,13 @@
         <a href="http://localhost:8080/authors/"> authors </a>
 
         <a href="http://localhost:8080/clause/page?page=0"> clauses </a>
-        <a href="http://localhost:8080/clause/parts"> clauseends </a>
+
+        <!--<a href="http://localhost:8080/clause/parts"> clauseends </a>-->
+        <a th:each="i : ${#numbers.sequence( 1, 30)}">
+            <a th:text="${i}" th:href="@{'http://localhost:8080/clause/parts/'+${i}}">
+                page
+            </a>
+        </a>
 
         <a href="http://localhost:8080/wordbook/page?page=0"> wordbook </a>
         <a href="http://localhost:8080/wordbook/ends"> ends </a>
