--- a/src/main/resources/templates/ClauseEnds.html
+++ b/src/main/resources/templates/ClauseEnds.html
@@ -10,8 +10,8 @@
 <div th:include="header::header"> HEADER </div>
 
 <a th:each="page : ${#numbers.sequence( 0, pages)}">
-    <a th:text="${page}" th:href="@{'http://localhost:8080/clause/parts/'+${page}}">
-    <!--<a th:text="${page}" th:href="@{'http://localhost:8080/clause/parts/'+${parts}+'/?page='+${page}}">-->
+    <!--<a th:text="${page}" th:href="@{'http://localhost:8080/clause/parts/'+${page}}">-->
+    <a th:text="${page}" th:href="@{'http://localhost:8080/clause/parts/'+${parts}+'/?page='+${page}}">
         page
     </a>
 </a>
@@ -22,7 +22,7 @@
         <td width="1%"/>
         <td th:text="${clause.parts}" width="1%" align="center"/>
         <td width="1%"/>
-        <td width="10%" >
+        <td width="20%" >
             <a th:each="word : ${clause.text}">
                 <a th:if="${word.lineBreak}">
                     <b th:text="${word.word.word}"/>
