--- a/src/main/resources/templates/Clauses.html
+++ b/src/main/resources/templates/Clauses.html
@@ -42,7 +42,7 @@
         <!--<td/>-->
         <td th:text="${clause.number}%1000" width="1%" align="right"/>
         <td width="1%"/>
-        <td width="1%" th:text="${clause.end}"/>
+        <td width="1%" th:text="${clause.end.getEnd()}"/>
         <td width="1%"/>
         <td th:text="${clause.parts}" width="1%" align="center"/>
         <td width="1%"/>
