server change protocol http -> https

--- a/src/main/resources/templates/indexArticles.html
+++ b/src/main/resources/templates/indexArticles.html
@@ -30,7 +30,8 @@
         </tr>
         <tr th:each ="article : ${articles}">
             <td> <a th:text="${article.id}" th:href="@{'/article/' + ${article.id}}"/> </td>
-            <td> <a th:text="${article.name.substring(20)}" th:href="@{${article.name}}"></a> </td>
+            <td> <a th:text="${article.name}" th:href="@{${article.name}}"></a> </td>
+            <!--<td> <a th:text="${article.name.substring(20)}" th:href="@{${article.name}}"></a> </td>-->
             <td> <a th:text="${article.author.id}"  th:href="@{'/authors/' + ${article.author.id}}"/> </td>
             <td> <a th:text="${article.author.realname}"  th:href="@{${article.author.name}}"/> </td>
             <!--<td> <a th:text="${article.author.realname}"  th:href="@{'/authors/'+${article.author.id}}"/> </td>-->
