--- a/src/main/resources/templates/authors.html
+++ b/src/main/resources/templates/authors.html
@@ -20,7 +20,8 @@
     </tr>
     <tr th:each ="author : ${authors}">
         <td> <a th:text="${author.id}" th:href="@{'/authors/' + ${author.id}}"></a> </td>
-        <td> <a th:text="${author.name.substring(26)}" th:href="@{${author.name}}"></a> </td>
+        <td> <a th:text="${author.name.substring(27)}" th:href="@{${author.name}}"></a> </td>
+        <!--<td> <a th:text="${author.name}" th:href="@{${author.name}}"></a> </td>-->
         <td> <a th:text="${author.realname}" th:href="@{'/authors/' + ${author.id}}"/> </td>
         <td> <a th:text="${#lists.size(author.articles)}" th:href="@{'/authors/' + ${author.id}}"/> </td>
         <td/>
