adding accents to wordbook from file

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -30,6 +30,8 @@
         <a href="http://localhost:8080/links/2"> links2 </a>
         <a href="http://localhost:8080/links/3"> links3 </a>
 
+        <a href="http://localhost:8080/wbload"> wbload </a>
+
         <br/>
         <!--<a href="http://localhost:8080/clause/parts"> clauseends </a>-->
         <a th:each="i : ${#numbers.sequence( 1, 30)}">
