new style accents clauses out wordbook multicolumn

--- a/src/main/resources/templates/Clauses.html
+++ b/src/main/resources/templates/Clauses.html
@@ -59,6 +59,7 @@
             </a>
         </td>
         <td width="1%"/>
+        <td th:text="${clause.getTextString()}"/>
     </tr>
 </table>
 
